# MCP-CodeCartographer

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  server.py
.github/workflows/: ci.yml
config/: settings.py
demo_files/: auth_service.py  database.py  main.py  utils.py
mcp_storage/: index.json
models/: schemas.py
services/: ai_consultant.py  graph_generator.py  repository_scanner.py
src/models/: __init__.py  schemas.py
src/services/: ai_analyzer.py  ai_consultant.py  graph_generator.py  repository_scanner.py  storage_manager.py
test_project/: README.md  dockerfile  dockerfile.orchestrator-worker  dockerfile.worker-with-service  pyproject.toml  supervisor.conf
test_project/prompts/: nl2dsl_instructions.md  orchestrator_instructions.md
test_project/src/agents/: langchain_orchestrator.py
test_project/src/llm/: llm_config.py  llm_factory.py
test_project/src/server/: chat_session.py  websocket_server.py
test_project/src/services/: db_utils.py  nl_to_dsl_service.py  rabbitmq_rpc_client.py  tools_registry.py
test_project/src/services/workers/: mcp_bridge_worker.py  standalone_worker.py
test_project/src/workers/: orchestrator_worker.py  standalone_worker.py
tests/: conftest.py  test_server.py  test_server_central_exception.py
tests/services/: test_ai.py  test_ai_and_graph_extra.py  test_ai_call_retries.py  test_ai_clean_and_call_errors.py  test_ai_clean_and_call_extra.py  test_ai_errors_and_retries.py  test_ai_internal.py  test_ai_run_with_files.py  test_graph_gen.py  test_graph_generator_branches.py  (+7 more)
