[project]
name = "orchestrator"
version = "1.0.0"
description = "LangChain Orchestrator with MCP"
requires-python = ">=3.11"

dependencies = [
    # Core FastAPI
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    
    # LangChain Core - CRITICAL
    "langchain<1.0.0,>=0.3.27",
    "langchain-core<1.0.0,>=0.3.79",
    "langchain-community<1.0.0,>=0.3.31",
    
    # LangChain LLM Providers
    "langchain-openai<1.0.0,>=0.3.35",
    "langchain-google-genai>=2.1.12,<3.0.0",
    "langchain-anthropic<1.0.0,>=0.3.22",
    
    # MCP Client
    "fastmcp>=2.0.0",
    
    # HTTP & Async
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    
    # Database & Cache
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    
    # Data Processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",

    "aio-pika==9.4.0",
    "aiormq==6.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
